--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "modal-react",
+  "name": "@eiken/modal-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -34,5 +34,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This is a React component that opens a modal when clicked. There are two options for implementing this functionality.",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/QuentDa/Modal_Package.git"
+  },
+  "keywords": [
+    "modal"
+  ],
+  "author": "quentin dean",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/QuentDa/Modal_Package/issues"
+  },
+  "homepage": "https://github.com/QuentDa/Modal_Package#readme"
 }
