--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@eiken/modal-react",
-  "version": "0.2.0",
+  "version": "0.7.0",
   "private": false,
+  "module": "dist/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf dist && babel src/lib --out-dir dist --copy-files",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,8 +42,12 @@
     ]
   },
   "description": "This is a React component that opens a modal when clicked. There are two options for implementing this functionality.",
-  "main": "index.js",
-  "devDependencies": {},
+  "main": "dist/index.js",
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/QuentDa/Modal_Package.git"
